force-app/main/default/objects/Integration_Work_Item__c/Integration_Work_Item__c.object-meta.xml
<CustomObject>
    <label>Integration Work Item</label>
    <nameField>
        <displayFormat>IWI-{000000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>