force-app/main/default/objects/Integration_Work_Item__c/fields/Additional_Lock_Keys__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lock_Keys__c</fullName>
    <label>Additional Lock Keys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>