force-app/main/default/objects/Integration_Work_Item__c/fields/Coalesced_Count__c.field-meta.xml
<CustomField>
    <fullName>Coalesced_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Coalesced Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>