force-app/main/default/objects/Integration_Work_Item__c/fields/External_Result_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Result_Id__c</fullName>
    <label>External Result Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>