force-app/main/default/objects/Integration_Work_Item__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>