force-app/main/default/objects/Integration_Work_Item__c/fields/Last_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_At__c</fullName>
    <label>Last Attempt At</label>
    <type>DateTime</type>
</CustomField>