force-app/main/default/objects/Integration_Work_Item__c/fields/Last_Dispatch_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Dispatch_Requested_At__c</fullName>
    <label>Last Dispatch Requested At</label>
    <type>DateTime</type>
</CustomField>