force-app/main/default/objects/Integration_Work_Item__c/fields/Last_Enqueued_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Enqueued_At__c</fullName>
    <label>Last Enqueued At</label>
    <type>DateTime</type>
</CustomField>