force-app/main/default/objects/Integration_Work_Item__c/fields/Lock_Key__c.field-meta.xml
<CustomField>
    <fullName>Lock_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lock Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>