force-app/main/default/objects/Integration_Work_Item__c/fields/Needs_Reprocess__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Reprocess</label>
    <type>Checkbox</type>
</CustomField>