force-app/main/default/objects/Integration_Work_Item__c/fields/Next_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_At__c</fullName>
    <label>Next Attempt At</label>
    <type>DateTime</type>
</CustomField>