force-app/main/default/objects/Integration_Work_Item__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <label>Payload Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>