force-app/main/default/objects/Integration_Work_Item__c/fields/Processing_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Processing_Started_At__c</fullName>
    <label>Processing Started At</label>
    <type>DateTime</type>
</CustomField>