force-app/main/default/objects/Integration_Work_Item__c/fields/Processor_Token__c.field-meta.xml
<CustomField>
    <fullName>Processor_Token__c</fullName>
    <label>Processor Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>