force-app/main/default/objects/Integration_Work_Item__c/fields/Source_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_External_Id__c</fullName>
    <label>Source External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>