force-app/main/default/objects/Integration_Work_Item__c/fields/Source_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Salesforce_Id__c</fullName>
    <label>Source Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>