force-app/main/default/objects/Integration_Work_Item__c/listViews/Completed_Today.listView-meta.xml
<ListView>
    <fullName>Completed_Today</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Completed_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Today</label>
</ListView>