force-app/main/default/objects/Integration_Work_Item__c/listViews/Failed.listView-meta.xml
<ListView>
    <fullName>Failed</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Attempt_Count__c</columns>
    <columns>Last_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed</label>
</ListView>