force-app/main/default/objects/Integration_Work_Item__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Lock_Key__c</columns>
    <columns>Next_Attempt_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending</label>
</ListView>