force-app/main/default/objects/Integration_Work_Item__c/listViews/Processing.listView-meta.xml
<ListView>
    <fullName>Processing</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Lock_Key__c</columns>
    <columns>Lease_Expires_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processing</value>
    </filters>
    <label>Processing</label>
</ListView>