force-app/main/default/objects/Integration_Work_Item__c/listViews/Retry_Due.listView-meta.xml
<ListView>
    <fullName>Retry_Due</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Attempt_Count__c</columns>
    <columns>Next_Attempt_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Retry</value>
    </filters>
    <label>Retry Due</label>
</ListView>